@@ -485,16 +485,6 @@ int client_recovery_rollback(client_config_coll_t *ccc,
                                struct act_rsrmgr_config_s, i);
             struct lixa_msg_body_qrcvr_24_rsrmgr_s record;
 
-            /*
-              if (XA_STATE_S0 == rsrmgr->s_state &&
-              LIXA_MSG_VERB_END == rsrmgr->next_verb) {
-              LIXA_TRACE(("client_recovery_rollback: resource manager "
-              "rmid=%d needs recovery (s_state=%d, "
-              "next_state=%d) because xa_prepare could be "
-              "previously issued\n",
-              rsrmgr->rmid, rsrmgr->s_state,
-              rsrmgr->next_verb));
-              } else */
             if (XA_STATE_S2 != rsrmgr->s_state &&
                 XA_STATE_S3 != rsrmgr->s_state &&
                 XA_STATE_S4 != rsrmgr->s_state) {
