@@ -80,7 +80,7 @@ xa_prepare/0
 xa_commit/0
 xa_close/0
 ]])
-AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002; lixa_test_exec.sh reset start case0031 commit 0 100 0], [0], [ignore], [ignore])
+AT_CHECK([export LIXA_CLIENT_CONNECTION_TIMEOUT=-1; export LIXA_PROFILE=CASE_PROF_0002; lixa_test_exec.sh reset start case0031 commit 0 100 0], [0], [ignore], [ignore])
 AT_CLEANUP
 
 # a lot of rollbacks
@@ -151,6 +151,6 @@ xa_end/0
 xa_rollback/0
 xa_close/0
 ]])
-AT_CHECK([export LIXA_PROFILE=CASE_PROF_0002; lixa_test_exec.sh none stop case0031 rollback 0 100 0], [0], [ignore], [ignore])
+AT_CHECK([export LIXA_CLIENT_CONNECTION_TIMEOUT=-1; export LIXA_PROFILE=CASE_PROF_0002; lixa_test_exec.sh none stop case0031 rollback 0 100 0], [0], [ignore], [ignore])
 AT_CLEANUP
 
